src/pages/Draw/blocks/content/CustomEdit/CustomNode.less
.wrapper {
    // position: absolute;
    right: 10px;
    top: 10px;
    z-index: 4;
    font-size: 12px;
    padding: 0 6px;
}


.updatenode__checkboxwrapper {
    margin-top: 10px;
    display: flex;
    // align-items: center;
}

